# data-discrepancy-checker-api

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py  test_main.py
